[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Interfaces/MainOverlay.gd" type="Script" id=1]
[ext_resource path="res://Resources/Materials/background.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/andika-basic/AndikaNewBasic-B.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Materials/health_background.png" type="Texture" id=4]
[ext_resource path="res://Resources/Materials/health_filler.png" type="Texture" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Resources/Materials/radar_backdrop.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Interfaces/Radar.gd" type="Script" id=8]
[ext_resource path="res://Resources/Materials/hotkey_label_4.png" type="Texture" id=9]
[ext_resource path="res://Resources/Materials/hotkey_label_3.png" type="Texture" id=10]
[ext_resource path="res://Resources/Materials/hotkey_label_2.png" type="Texture" id=11]
[ext_resource path="res://Resources/Materials/hotkey_label_1.png" type="Texture" id=12]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 2

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 2

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 3 )

[node name="MainOverlay" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 80.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1036.0
margin_bottom = 104.0

[node name="Bars" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 882.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="TurretBar" type="HBoxContainer" parent="HBoxContainer/Bars"]
margin_right = 882.0
margin_bottom = 40.0

[node name="Count" type="MarginContainer" parent="HBoxContainer/Bars/TurretBar"]
margin_right = 130.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Bars/TurretBar/Count"]
margin_right = 130.0
margin_bottom = 40.0
rect_min_size = Vector2( 130, 40 )
texture = ExtResource( 2 )

[node name="TurretLabel" type="Label" parent="HBoxContainer/Bars/TurretBar/Count/Background"]
material = SubResource( 1 )
margin_left = 17.36
margin_right = 91.36
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Turrets"

[node name="NorthTurretHealth" type="TextureProgress" parent="HBoxContainer/Bars/TurretBar"]
margin_left = 134.0
margin_right = 318.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="EastTurretHealth" type="TextureProgress" parent="HBoxContainer/Bars/TurretBar"]
margin_left = 322.0
margin_right = 506.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="SouthTurretHealth" type="TextureProgress" parent="HBoxContainer/Bars/TurretBar"]
margin_left = 510.0
margin_right = 694.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="WestTurretHealth" type="TextureProgress" parent="HBoxContainer/Bars/TurretBar"]
margin_left = 698.0
margin_right = 882.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="CityBar" type="HBoxContainer" parent="HBoxContainer/Bars"]
margin_top = 44.0
margin_right = 882.0
margin_bottom = 84.0

[node name="Count" type="MarginContainer" parent="HBoxContainer/Bars/CityBar"]
margin_right = 130.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Bars/CityBar/Count"]
margin_right = 130.0
margin_bottom = 40.0
rect_min_size = Vector2( 130, 40 )
texture = ExtResource( 2 )

[node name="CityLabel" type="Label" parent="HBoxContainer/Bars/CityBar/Count/Background"]
material = SubResource( 3 )
margin_left = 23.69
margin_right = 63.69
margin_bottom = 33.0
custom_fonts/font = SubResource( 4 )
text = "City"

[node name="BuildlingHealth1" type="TextureProgress" parent="HBoxContainer/Bars/CityBar"]
margin_left = 134.0
margin_right = 318.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="BuildingHealth2" type="TextureProgress" parent="HBoxContainer/Bars/CityBar"]
margin_left = 322.0
margin_right = 506.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="BuildingHealth3" type="TextureProgress" parent="HBoxContainer/Bars/CityBar"]
margin_left = 510.0
margin_right = 694.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="BuildingHealth4" type="TextureProgress" parent="HBoxContainer/Bars/CityBar"]
margin_left = 698.0
margin_right = 882.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="Counters" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 886.0
margin_right = 1016.0
margin_bottom = 84.0

[node name="Counter" type="MarginContainer" parent="HBoxContainer/Counters"]
margin_right = 130.0
margin_bottom = 84.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Counters/Counter"]
margin_right = 130.0
margin_bottom = 84.0
rect_min_size = Vector2( 130, 40 )
texture = ExtResource( 2 )

[node name="Icon" type="TextureRect" parent="HBoxContainer/Counters/Counter/Background"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
stretch_mode = 4

[node name="TimerLabel" type="Label" parent="HBoxContainer/Counters/Counter/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
text = "10"
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 900, 500 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="hotkey_label_west" type="Sprite" parent="Sprite"]
position = Vector2( -345.25, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 9 )

[node name="hotkey_label_east" type="Sprite" parent="Sprite"]
position = Vector2( 354.75, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="hotkey_label_south" type="Sprite" parent="Sprite"]
position = Vector2( 0, 350 )
scale = Vector2( 5, 5 )
texture = ExtResource( 11 )

[node name="hotkey_label_north" type="Sprite" parent="Sprite"]
position = Vector2( 0, -350 )
scale = Vector2( 5, 5 )
texture = ExtResource( 12 )
